# recosearch

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
docs/design/: architecture.md  modules.md  workflow.md
docs/usage/: adding-a-source.md  asking-questions.md  configuring-sources.md  federation.md  getting-started.md  limitations.md  observability.md  security.md  sources-and-adapters.md  troubleshooting.md  worked-example.md
examples/novamart/: scenario_config.yaml  semantic.md  source_config.yaml
examples/novashop-duckdb/: README.md  scenario_config.yaml  seed.py  semantic.md  source_config.yaml
recosearch/: __init__.py  acl.py  analysis_request.py  citations.py  config.py  conflicts.py  contract.py  contract_schema.py  entity_resolution.py  errors.py  evidence_schema.py  evidence_validator.py  federation.py  field_roles.py  json_utils.py  mcp_server.py  metric_resolver.py  metric_resolver_schema.py  observability.py  rbac.py  rules.py  scenario.py  session.py  settings.py  tools.py  vocabularies.py
recosearch/adapters/: __init__.py  base.py  duckdb.py  mongodb.py  opensearch.py  postgres.py  qdrant.py  snowflake.py
recosearch/metric_packs/: ecommerce.yaml  fallback_policy.yaml  global.yaml  roles.yaml
recosearch/metrics/: __init__.py
recosearch/semantic_layers/: capabilities.py  compiler.py  contract.py  envelope.py  identity.py  ledger.py  mcp_tools.py  pipeline.py  plan.py  policy.py  query.py  sources.py  sql_lint.py  validate.py
semantic/: scenario_config.yaml  semantic.md  source_config.yaml
tests/: conftest.py
tests/integration/: test_audit_flow.py  test_dispatch_chain.py  test_evidence_flow.py  test_federation_flow.py  test_rbac_acl_combined.py
tests/live/: conftest.py  test_live_federation.py  test_live_health.py  test_live_masking.py  test_live_mcp.py  test_live_opensearch.py  test_live_postgres.py  test_live_qdrant.py  test_live_snowflake.py
tests/semantic_layers/: conftest.py  test_adapters.py  test_all_layers_business_use_case.py  test_compiler.py  test_context_catalog.py  test_context_certify.py  test_context_cli.py  test_context_e2e.py  test_context_eval.py  test_context_events.py  test_context_export.py  test_context_facets.py  test_context_full_coverage.py  test_context_loader.py  test_context_loader_edges.py  test_context_mcp_pipeline.py  test_context_probe.py  test_context_resolve.py  test_context_schema.py  test_context_trust.py  test_context_trust_drift.py  (+71 more)
(+132 files in other folders)
