[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recosearch"
version = "0.1.0"
description = "A deterministic, governed MCP server that separates AI reasoning from validated, cited data execution."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Recohut" }]
keywords = ["mcp", "llm", "governance", "semantic-layer", "rag", "cite-or-refuse"]

# Always-required runtime dependencies. Source-specific drivers and the L3
# ontology stack are optional extras below — install only what you use.
dependencies = [
    "mcp>=1.26",
    "PyYAML>=6.0",
    "sqlglot>=30.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
# Per-adapter extras (six sources).
duckdb = ["duckdb>=1.0"]                       # powers the zero-infra quickstart
postgres = ["psycopg2-binary>=2.9"]
opensearch = ["opensearch-py>=3.0", "requests>=2.31"]
qdrant = ["qdrant-client>=1.16", "sentence-transformers>=5.0"]
snowflake = ["snowflake-connector-python>=3.0"]
mongodb = ["pymongo>=4.6"]
# L3 ontology / SHACL claim validation.
ontology = ["rdflib>=7.0", "pyshacl>=0.26"]
# Optional tracing (only when RECOSEARCH_TRACING_ENABLED=true).
observability = [
    "arize-phoenix-otel>=0.6",
    "openinference-instrumentation>=0.1",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
]
# Everything (all adapters + ontology + observability), for the full suite.
all = [
    "duckdb>=1.0",
    "psycopg2-binary>=2.9",
    "opensearch-py>=3.0",
    "requests>=2.31",
    "qdrant-client>=1.16",
    "sentence-transformers>=5.0",
    "snowflake-connector-python>=3.0",
    "pymongo>=4.6",
    "rdflib>=7.0",
    "pyshacl>=0.26",
    "arize-phoenix-otel>=0.6",
    "openinference-instrumentation>=0.1",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "coverage>=7.0"]

[project.scripts]
recosearch = "recosearch.mcp_server:main"
recosearch-certify = "recosearch.semantic_layers.metrics.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["recosearch*"]

[tool.setuptools.package-data]
recosearch = ["**/*.yaml", "**/*.ttl"]

[tool.coverage.run]
# Coverage source list.
source = ["recosearch"]

[tool.coverage.report]
show_missing = true
precision = 2
# fail_under intentionally unset until a coverage threshold the suite reliably
# meets is established.
